# EBS_all

./: default.conf  docker-compose.yml
blogs/: .gitignore  Dockerfile
blogs/apps/blog/: models.py  serializers.py  urls.py  views.py
blogs/apps/blog/migrations/: 0002_blog_enabled.py  0003_comments.py
blogs/apps/common/: helpers.py
blogs/config/: settings.py
blogs/static/drf-yasg/: README
tasks/: .coveragerc  Dockerfile  pyproject.toml  requirements.txt
tasks/apps/common/: helpers.py  pagination.py  tests.py  urls.py  views.py
tasks/apps/common/fixtures/: database.json
tasks/apps/common/management/commands/: add_tasks_and_times.py
tasks/apps/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/apps/tasks/migrations/: 0001_initial.py  0002_task_user.py  0003_remove_task_user_task_owner.py  0004_alter_task_title.py  0005_alter_task_owner.py  0006_alter_task_title.py  0007_comment.py  0008_alter_comment_task.py  0009_alter_comment_task.py  0010_time.py  0011_alter_time_end_alter_time_minutes.py  0012_delete_time.py
tasks/apps/times/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/apps/times/migrations/: 0001_initial.py  0002_alter_time_minutes.py  0003_alter_time_start.py  0004_time_owner_alter_time_start.py
tasks/apps/users/: serializers.py  tests.py  urls.py  views.py
tasks/config/: settings.py  urls.py
tasks/docker/: docker-compose.test.yml  docker-compose.yml
